# using_rabbitmq

./: CMakeLists.txt
cmake/: FindRabbitMQ-C.cmake
consumer/: CMakeLists.txt  main.cpp
producer/: CMakeLists.txt  main.cpp
producer_consumer/: CMakeLists.txt  main.cpp
rabbitmq_client/: CMakeLists.txt  error.h  fwd.h  simple_client.h  utils.h
rabbitmq_client/src/: error.cpp  simple_client.cpp  utils.cpp
utils/: CMakeLists.txt  errors.cpp  errors.h
